--- a/course/international/index.html
+++ b/course/international/index.html
@@ -118,9 +118,9 @@ function resizeFresh(){
                 <span>用户角色</span>
                 <div class="nav_list">
                                                             <p><a href="/role/student/">学生</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=20">在校生家长</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=21">教职工</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=22">校友</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=20">在校生家长</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=21">教职工</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=22">校友</a></p>
                                                         </div>
             </li>
 
@@ -129,10 +129,10 @@ function resizeFresh(){
         </ul>
     </div>
     <div class="head_other">
-        <!--<a class="search" href="/index.php?m=content&c=index&a=lists&catid=52"></a>-->
+        <!--<a class="search" href="/index.php@m=content&c=index&a=lists&catid=52"></a>-->
         <a class="search" href="/index.php?m=search"></a>
         <a class="lang" href="http://www.bnds.cn/en"></a>
-        <!-- <a class="lang" href="index.php?m=content&c=index&a=lists&catid=90"></a> -->
+        <!-- <a class="lang" href="index.php@m=content&c=index&a=lists&catid=90"></a> -->
     </div>
 </div>
     <!-- head -->
@@ -347,7 +347,7 @@ function resizeFresh(){
                             <h4>AL</h4>
                             <span>A-Level Programme </span>
                             <P>在这里，我们的学生将深入钻研他们的学科，为大学生活做好学术准备。剑桥国际评估考试是全世界公认的国际教育标杆，更重要的是，我们的老师会...</P>
-                            <a href="/index.php?m=content&c=index&a=lists&catid=60">了解更多</a>
+                            <a href="/index.php@m=content&c=index&a=lists&catid=60">了解更多</a>
                         </div>
                     </li>
                                         <li>
@@ -359,7 +359,7 @@ function resizeFresh(){
                             <h4>AP</h4>
                             <span>AP Programme</span>
                             <P>这是一所独一无二且极富创造力的学校，我们的任务就是为学生打造一个充满创造力的学习环境，在这里他们能培养和发展毕生受用的技能...</P>
-                            <a href="/index.php?m=content&c=index&a=lists&catid=61">了解更多</a>
+                            <a href="/index.php@m=content&c=index&a=lists&catid=61">了解更多</a>
                         </div>
                     </li>
                                         <li>
@@ -371,7 +371,7 @@ function resizeFresh(){
                             <h4>IB</h4>
                             <span>IBDP Programme</span>
                             <P>我们的校园社区由才华横溢、充满自信的学生以及优秀、鼓舞人心的教师团队组成。我们为高中生提供了一个绝佳的学习环境，使他们可以奋发向上...</P>
-                            <a href="/index.php?m=content&c=index&a=lists&catid=62">了解更多</a>
+                            <a href="/index.php@m=content&c=index&a=lists&catid=62">了解更多</a>
                         </div>
                     </li>
                                                         </ul>
@@ -390,7 +390,7 @@ function resizeFresh(){
                                                         <img src="/images/course/i4_icon1.png" alt="">
                                                         <h3>成长平台</h3>
                             <span>用热爱影响社群</span>
-                            <a href="/index.php?m=content&c=index&a=lists&catid=71">了解更多</a>
+                            <a href="/index.php@m=content&c=index&a=lists&catid=71">了解更多</a>
                         </div>
                     </li>
                                     <li style="padding-left:0;">
@@ -399,7 +399,7 @@ function resizeFresh(){
                                                         <img src="/images/course/i4_icon2.png" alt="">
                                                         <h3>生涯规划</h3>
                             <span>一场发现自我的旅程</span>
-                            <a href="/index.php?m=content&c=index&a=lists&catid=70">了解更多</a>
+                            <a href="/index.php@m=content&c=index&a=lists&catid=70">了解更多</a>
                         </div>
                     </li>
                                             </ul>
@@ -595,19 +595,19 @@ function resizeFresh(){
         <!-- <li>
             <h4>网站导航</h4>
             <p>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=6">遇见十一</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=12">新闻动态</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=14">十一课程</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=16">校园生活</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=6">遇见十一</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=12">新闻动态</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=14">十一课程</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=16">校园生活</a></span>
             </p>
         </li> -->
         <li>
             <h4>用户角色</h4>
             <p>
                 <span><a href="/role/student/">学生</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=20">在校生家长</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=21">教职工</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=22">校友</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=20">在校生家长</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=21">教职工</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=22">校友</a></span>
             </p>
         </li>
         <li>
@@ -615,8 +615,8 @@ function resizeFresh(){
             <p>
                                                         <span><a href="https://bnds.yunxiao.com/apps/login" target="_blank">云平台</a></span>
                                         <span><a href="https://mp.weixin.qq.com/s/-rQZJoh6NXuauo-g6Ye7PA" target="_blank">校友卡申办</a></span>
-                                        <span><a href="/index.php?m=content&c=index&a=lists&catid=83" target="_blank">FAQ</a></span>
-                                        <span><a href="/index.php?m=content&c=index&a=lists&catid=100" target="_blank">加入我们</a></span>
+                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=83" target="_blank">FAQ</a></span>
+                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=100" target="_blank">加入我们</a></span>
                                                 </p>
         </li>
         <li>
