--- a/activity/notice/index.html
+++ b/activity/notice/index.html
@@ -118,9 +118,9 @@ function resizeFresh(){
                 <span>用户角色</span>
                 <div class="nav_list">
                                                             <p><a href="/role/student/">学生</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=20">在校生家长</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=21">教职工</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=22">校友</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=20">在校生家长</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=21">教职工</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=22">校友</a></p>
                                                         </div>
             </li>
 
@@ -129,10 +129,10 @@ function resizeFresh(){
         </ul>
     </div>
     <div class="head_other">
-        <!--<a class="search" href="/index.php?m=content&c=index&a=lists&catid=52"></a>-->
+        <!--<a class="search" href="/index.php@m=content&c=index&a=lists&catid=52"></a>-->
         <a class="search" href="/index.php?m=search"></a>
         <a class="lang" href="http://www.bnds.cn/en"></a>
-        <!-- <a class="lang" href="index.php?m=content&c=index&a=lists&catid=90"></a> -->
+        <!-- <a class="lang" href="index.php@m=content&c=index&a=lists&catid=90"></a> -->
     </div>
 </div>
     <!-- head -->
@@ -169,8 +169,8 @@ function resizeFresh(){
                 <div class="div_choose">
                     <span>年份选择</span>
                                         <ul class="dc_list">
-                                                <li><a href="/index.php?m=content&c=index&a=lists&catid=13&year=2025#newsAnchor">2025</a></li>
-                                                <li><a href="/index.php?m=content&c=index&a=lists&catid=13&year=2024#newsAnchor">2024</a></li>
+                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=13&year=2025#newsAnchor">2025</a></li>
+                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=13&year=2024#newsAnchor">2024</a></li>
                                             </ul>
                                     </div>
             </div>
@@ -267,19 +267,19 @@ function resizeFresh(){
         <!-- <li>
             <h4>网站导航</h4>
             <p>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=6">遇见十一</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=12">新闻动态</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=14">十一课程</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=16">校园生活</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=6">遇见十一</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=12">新闻动态</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=14">十一课程</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=16">校园生活</a></span>
             </p>
         </li> -->
         <li>
             <h4>用户角色</h4>
             <p>
                 <span><a href="/role/student/">学生</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=20">在校生家长</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=21">教职工</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=22">校友</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=20">在校生家长</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=21">教职工</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=22">校友</a></span>
             </p>
         </li>
         <li>
@@ -287,8 +287,8 @@ function resizeFresh(){
             <p>
                                                         <span><a href="https://bnds.yunxiao.com/apps/login" target="_blank">云平台</a></span>
                                         <span><a href="https://mp.weixin.qq.com/s/-rQZJoh6NXuauo-g6Ye7PA" target="_blank">校友卡申办</a></span>
-                                        <span><a href="/index.php?m=content&c=index&a=lists&catid=83" target="_blank">FAQ</a></span>
-                                        <span><a href="/index.php?m=content&c=index&a=lists&catid=100" target="_blank">加入我们</a></span>
+                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=83" target="_blank">FAQ</a></span>
+                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=100" target="_blank">加入我们</a></span>
                                                 </p>
         </li>
         <li>
