--- a/role/student/index.html
+++ b/role/student/index.html
@@ -119,9 +119,9 @@ function resizeFresh(){
                 <span>用户角色</span>
                 <div class="nav_list">
                                                             <p><a href="/role/student/">学生</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=20">在校生家长</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=21">教职工</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=22">校友</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=20">在校生家长</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=21">教职工</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=22">校友</a></p>
                                                         </div>
             </li>
 
@@ -130,10 +130,10 @@ function resizeFresh(){
         </ul>
     </div>
     <div class="head_other">
-        <!--<a class="search" href="/index.php?m=content&c=index&a=lists&catid=52"></a>-->
+        <!--<a class="search" href="/index.php@m=content&c=index&a=lists&catid=52"></a>-->
         <a class="search" href="/index.php?m=search"></a>
         <a class="lang" href="http://www.bnds.cn/en"></a>
-        <!-- <a class="lang" href="index.php?m=content&c=index&a=lists&catid=90"></a> -->
+        <!-- <a class="lang" href="index.php@m=content&c=index&a=lists&catid=90"></a> -->
     </div>
     </div>
     <!-- head -->
@@ -153,9 +153,9 @@ function resizeFresh(){
     <div class="second_nav">
         <ul>
                                     <li class="on"><a href="/role/student/"><span>学生</a></span></li>
-                        <li ><a href="/index.php?m=content&c=index&a=lists&catid=20"><span>在校生家长</a></span></li>
-                        <li ><a href="/index.php?m=content&c=index&a=lists&catid=21"><span>教职工</a></span></li>
-                        <li ><a href="/index.php?m=content&c=index&a=lists&catid=22"><span>校友</a></span></li>
+                        <li ><a href="/index.php@m=content&c=index&a=lists&catid=20"><span>在校生家长</a></span></li>
+                        <li ><a href="/index.php@m=content&c=index&a=lists&catid=21"><span>教职工</a></span></li>
+                        <li ><a href="/index.php@m=content&c=index&a=lists&catid=22"><span>校友</a></span></li>
                                 </ul>
     </div>
         <!-- util-bin -->    <div class="container students parents">
@@ -200,7 +200,7 @@ function resizeFresh(){
                                                         <!--  -->
                         </li>
                                                                         <li class="cloud_platform">
-                                                            <a href="/index.php?m=content&c=index&a=lists&catid=83" target="_blank">
+                                                            <a href="/index.php@m=content&c=index&a=lists&catid=83" target="_blank">
                                                                                         <div class="div_img">
                                     <img src="/images/role/faq.png" alt="">
                                     <img src="/images/role/faqw.png" alt="">
@@ -374,19 +374,19 @@ function resizeFresh(){
         <!-- <li>
             <h4>网站导航</h4>
             <p>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=6">遇见十一</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=12">新闻动态</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=14">十一课程</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=16">校园生活</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=6">遇见十一</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=12">新闻动态</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=14">十一课程</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=16">校园生活</a></span>
             </p>
         </li> -->
         <li>
             <h4>用户角色</h4>
             <p>
                 <span><a href="/role/student/">学生</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=20">在校生家长</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=21">教职工</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=22">校友</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=20">在校生家长</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=21">教职工</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=22">校友</a></span>
             </p>
         </li>
         <li>
@@ -394,8 +394,8 @@ function resizeFresh(){
             <p>
                                                         <span><a href="https://bnds.yunxiao.com/apps/login" target="_blank">云平台</a></span>
                                         <span><a href="https://mp.weixin.qq.com/s/-rQZJoh6NXuauo-g6Ye7PA" target="_blank">校友卡申办</a></span>
-                                        <span><a href="/index.php?m=content&c=index&a=lists&catid=83" target="_blank">FAQ</a></span>
-                                        <span><a href="/index.php?m=content&c=index&a=lists&catid=100" target="_blank">加入我们</a></span>
+                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=83" target="_blank">FAQ</a></span>
+                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=100" target="_blank">加入我们</a></span>
                                                 </p>
         </li>
         <li>
