--- a/index.php@m=content&c=index&a=show&catid=41&id=10.html
+++ b/index.php@m=content&c=index&a=show&catid=41&id=10.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 	<head>
 	<meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <meta name="title" property="og:title" content="冬 - 校园四季 - 北京市十一学校官网">
     <meta name="description" property="og:description" content="是雪，把红瓦泼成画；">
     <meta name="image" property="og:image" content="https://www.bnds.cn/fxlogo.jpg">
-    <meta property="og:url" content="https://www.bnds.cn/index.php?m=content&c=index&a=show&catid=41&id=10">
+    <meta property="og:url" content="https://www.bnds.cn/index.php@m=content&c=index&a=show&catid=41&id=10.html">
     <meta property="og:site_name" content="冬 - 校园四季 - 北京市十一学校官网">
     <!--share end -->
     <!-- add twitter meta begin -->
