--- a/index.php@m=content&c=index&a=show&catid=41&id=212.html
+++ b/index.php@m=content&c=index&a=show&catid=41&id=212.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 	<head>
 	<meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <meta name="title" property="og:title" content="秋 - 校园四季 - 北京市十一学校官网">
     <meta name="description" property="og:description" content="火红的枫叶在呼唤秋。层林尽染织成一片晚霞；新的面容走进校园，不再是娃娃。摘自直升高一范怡彤《十一的四季》">
     <meta name="image" property="og:image" content="https://www.bnds.cn/fxlogo.jpg">
-    <meta property="og:url" content="https://www.bnds.cn/index.php?m=content&c=index&a=show&catid=41&id=212">
+    <meta property="og:url" content="https://www.bnds.cn/index.php@m=content&c=index&a=show&catid=41&id=212.html">
     <meta property="og:site_name" content="秋 - 校园四季 - 北京市十一学校官网">
     <!--share end -->
     <!-- add twitter meta begin -->
