--- a/index.php@m=content&c=index&a=show&catid=91&id=2.html
+++ b/index.php@m=content&c=index&a=show&catid=91&id=2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 	<head>
 	<meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <meta name="title" property="og:title" content="文化树与文化石 - 人文十一 - 北京市十一学校官网">
     <meta name="description" property="og:description" content="北京市十一学校官网">
     <meta name="image" property="og:image" content="https://www.bnds.cn/fxlogo.jpg">
-    <meta property="og:url" content="https://www.bnds.cn/index.php?m=content&c=index&a=show&catid=91&id=2">
+    <meta property="og:url" content="https://www.bnds.cn/index.php@m=content&c=index&a=show&catid=91&id=2.html">
     <meta property="og:site_name" content="文化树与文化石 - 人文十一 - 北京市十一学校官网">
     <!--share end -->
     <!-- add twitter meta begin -->
