--- a/activity/information/index.html
+++ b/activity/information/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
 	<meta charset="UTF-8">
@@ -119,9 +119,9 @@ function resizeFresh(){
                 <span>用户角色</span>
                 <div class="nav_list">
                                                             <p><a href="/role/student/">学生</a></p>
-                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=20">在校生家长</a></p>
-                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=21">教职工</a></p>
-                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=22">校友</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=20.html">在校生家长</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=21.html">教职工</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=22.html">校友</a></p>
                                                         </div>
             </li>
 
@@ -130,10 +130,10 @@ function resizeFresh(){
         </ul>
     </div>
     <div class="head_other">
-        <!--<a class="search" href="/index.php@m=content&c=index&a=lists&catid=52"></a>-->
-        <a class="search" href="/index.php?m=search"></a>
+        <!--<a class="search" href="/index.php@m=content&c=index&a=lists&catid=52.html"></a>-->
+        <a class="search" href="/index.php@m=search.html"></a>
         <a class="lang" href="http://www.bnds.cn/en"></a>
-        <!-- <a class="lang" href="index.php@m=content&c=index&a=lists&catid=90"></a> -->
+        <!-- <a class="lang" href="index.php@m=content&c=index&a=lists&catid=90.html"></a> -->
     </div>
 </div>
     <!-- head -->
@@ -169,12 +169,12 @@ function resizeFresh(){
                 <div class="div_choose">
                     <span>年份选择</span>
                                         <ul class="dc_list">
-                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12&year=2025#newsAnchor">2025</a></li>
-                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12&year=2024#newsAnchor">2024</a></li>
-                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12&year=2023#newsAnchor">2023</a></li>
-                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12&year=2022#newsAnchor">2022</a></li>
-                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12&year=2021#newsAnchor">2021</a></li>
-                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12&year=2020#newsAnchor">2020</a></li>
+                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12.html&year=2025#newsAnchor">2025</a></li>
+                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12.html&year=2024#newsAnchor">2024</a></li>
+                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12.html&year=2023#newsAnchor">2023</a></li>
+                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12.html&year=2022#newsAnchor">2022</a></li>
+                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12.html&year=2021#newsAnchor">2021</a></li>
+                                                <li><a href="/index.php@m=content&c=index&a=lists&catid=12.html&year=2020#newsAnchor">2020</a></li>
                                             </ul>
                                     </div>
             </div>
@@ -326,19 +326,19 @@ function resizeFresh(){
         <!-- <li>
             <h4>网站导航</h4>
             <p>
-                <span><a href="index.php@m=content&c=index&a=lists&catid=6">遇见十一</a></span>
-                <span><a href="index.php@m=content&c=index&a=lists&catid=12">新闻动态</a></span>
-                <span><a href="index.php@m=content&c=index&a=lists&catid=14">十一课程</a></span>
-                <span><a href="index.php@m=content&c=index&a=lists&catid=16">校园生活</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=6.html">遇见十一</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=12.html">新闻动态</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=14.html">十一课程</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=16.html">校园生活</a></span>
             </p>
         </li> -->
         <li>
             <h4>用户角色</h4>
             <p>
                 <span><a href="/role/student/">学生</a></span>
-                <span><a href="/index.php@m=content&c=index&a=lists&catid=20">在校生家长</a></span>
-                <span><a href="/index.php@m=content&c=index&a=lists&catid=21">教职工</a></span>
-                <span><a href="/index.php@m=content&c=index&a=lists&catid=22">校友</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=20.html">在校生家长</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=21.html">教职工</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=22.html">校友</a></span>
             </p>
         </li>
         <li>
@@ -346,8 +346,8 @@ function resizeFresh(){
             <p>
                                                         <span><a href="https://bnds.yunxiao.com/apps/login" target="_blank">云平台</a></span>
                                         <span><a href="https://mp.weixin.qq.com/s/-rQZJoh6NXuauo-g6Ye7PA" target="_blank">校友卡申办</a></span>
-                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=83" target="_blank">FAQ</a></span>
-                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=100" target="_blank">加入我们</a></span>
+                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=83.html" target="_blank">FAQ</a></span>
+                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=100.html" target="_blank">加入我们</a></span>
                                                 </p>
         </li>
         <li>
