--- a/index.php@m=content&c=index&a=lists&catid=22.html
+++ b/index.php@m=content&c=index&a=lists&catid=22.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
 	<meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <meta name="title" property="og:title" content="校友 - 北京市十一学校官网">
     <meta name="description" property="og:description" content="北京市十一学校官网">
     <meta name="image" property="og:image" content="https://www.bnds.cn/fxlogo.jpg">
-    <meta property="og:url" content="https://www.bnds.cn/index.php?m=content&c=index&a=lists&catid=22">
+    <meta property="og:url" content="https://www.bnds.cn/index.php@m=content&c=index&a=lists&catid=22.html">
     <meta property="og:site_name" content="校友 - 北京市十一学校官网">
     <!--share end -->
     <!-- add twitter meta begin -->
@@ -119,9 +119,9 @@ function resizeFresh(){
                 <span>用户角色</span>
                 <div class="nav_list">
                                                             <p><a href="/role/student/">学生</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=20">在校生家长</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=21">教职工</a></p>
-                                        <p><a href="/index.php?m=content&c=index&a=lists&catid=22">校友</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=20.html">在校生家长</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=21.html">教职工</a></p>
+                                        <p><a href="/index.php@m=content&c=index&a=lists&catid=22.html">校友</a></p>
                                                         </div>
             </li>
 
@@ -130,10 +130,10 @@ function resizeFresh(){
         </ul>
     </div>
     <div class="head_other">
-        <!--<a class="search" href="/index.php?m=content&c=index&a=lists&catid=52"></a>-->
-        <a class="search" href="/index.php?m=search"></a>
+        <!--<a class="search" href="/index.php@m=content&c=index&a=lists&catid=52.html"></a>-->
+        <a class="search" href="/index.php@m=search.html"></a>
         <a class="lang" href="http://www.bnds.cn/en"></a>
-        <!-- <a class="lang" href="index.php?m=content&c=index&a=lists&catid=90"></a> -->
+        <!-- <a class="lang" href="index.php@m=content&c=index&a=lists&catid=90.html"></a> -->
     </div>
     </div>
     <!-- head -->
@@ -145,7 +145,7 @@ function resizeFresh(){
         <div class="div_beard">
 	<p>
 																						<a href="/role/student/">角色</a>
-															<a href="/index.php?m=content&c=index&a=lists&catid=22">校友</a>
+															<a href="/index.php@m=content&c=index&a=lists&catid=22.html">校友</a>
 							</p>
 </div>    </div>
 
@@ -153,9 +153,9 @@ function resizeFresh(){
     <div class="second_nav">
         <ul>
                                     <li ><a href="/role/student/"><span>学生</a></span></li>
-                        <li ><a href="/index.php?m=content&c=index&a=lists&catid=20"><span>在校生家长</a></span></li>
-                        <li ><a href="/index.php?m=content&c=index&a=lists&catid=21"><span>教职工</a></span></li>
-                        <li class="on"><a href="/index.php?m=content&c=index&a=lists&catid=22"><span>校友</a></span></li>
+                        <li ><a href="/index.php@m=content&c=index&a=lists&catid=20.html"><span>在校生家长</a></span></li>
+                        <li ><a href="/index.php@m=content&c=index&a=lists&catid=21.html"><span>教职工</a></span></li>
+                        <li class="on"><a href="/index.php@m=content&c=index&a=lists&catid=22.html"><span>校友</a></span></li>
                                 </ul>
     </div>
         <!-- 旧的  -->
@@ -480,35 +480,35 @@ function resizeFresh(){
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                                                                         <div class="swiper-slide">
-                            <!-- <a href="/index.php?m=content&c=index&a=show&catid=97&id=8"></a> -->
+                            <!-- <a href="/index.php@m=content&c=index&a=show&catid=97&id=8.html"></a> -->
                             <img src="/11s/uploadfile/2022/0113/20220113054511176.jpg" alt="">
                         </div>
                                                 <div class="swiper-slide">
-                            <!-- <a href="/index.php?m=content&c=index&a=show&catid=97&id=6"></a> -->
+                            <!-- <a href="/index.php@m=content&c=index&a=show&catid=97&id=6.html"></a> -->
                             <img src="/11s/uploadfile/2022/0110/20220110125152535.png" alt="">
                         </div>
                                                 <div class="swiper-slide">
-                            <!-- <a href="/index.php?m=content&c=index&a=show&catid=97&id=9"></a> -->
+                            <!-- <a href="/index.php@m=content&c=index&a=show&catid=97&id=9.html"></a> -->
                             <img src="/11s/uploadfile/2022/0113/20220113054855742.jpg" alt="">
                         </div>
                                                 <div class="swiper-slide">
-                            <!-- <a href="/index.php?m=content&c=index&a=show&catid=97&id=10"></a> -->
+                            <!-- <a href="/index.php@m=content&c=index&a=show&catid=97&id=10.html"></a> -->
                             <img src="/11s/uploadfile/2022/0113/20220113055053883.jpg" alt="">
                         </div>
                                                 <div class="swiper-slide">
-                            <!-- <a href="/index.php?m=content&c=index&a=show&catid=97&id=11"></a> -->
+                            <!-- <a href="/index.php@m=content&c=index&a=show&catid=97&id=11.html"></a> -->
                             <img src="/11s/uploadfile/2022/0113/20220113055120621.jpg" alt="">
                         </div>
                                                 <div class="swiper-slide">
-                            <!-- <a href="/index.php?m=content&c=index&a=show&catid=97&id=12"></a> -->
+                            <!-- <a href="/index.php@m=content&c=index&a=show&catid=97&id=12.html"></a> -->
                             <img src="/11s/uploadfile/2022/0113/20220113055145280.jpg" alt="">
                         </div>
                                                 <div class="swiper-slide">
-                            <!-- <a href="/index.php?m=content&c=index&a=show&catid=97&id=13"></a> -->
+                            <!-- <a href="/index.php@m=content&c=index&a=show&catid=97&id=13.html"></a> -->
                             <img src="/11s/uploadfile/2022/0113/20220113055209931.jpg" alt="">
                         </div>
                                                 <div class="swiper-slide">
-                            <!-- <a href="/index.php?m=content&c=index&a=show&catid=97&id=4"></a> -->
+                            <!-- <a href="/index.php@m=content&c=index&a=show&catid=97&id=4.html"></a> -->
                             <img src="/11s/uploadfile/2022/0110/20220110124635874.png" alt="">
                         </div>
                                                                   
@@ -542,19 +542,19 @@ function resizeFresh(){
         <!-- <li>
             <h4>网站导航</h4>
             <p>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=6">遇见十一</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=12">新闻动态</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=14">十一课程</a></span>
-                <span><a href="index.php?m=content&c=index&a=lists&catid=16">校园生活</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=6.html">遇见十一</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=12.html">新闻动态</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=14.html">十一课程</a></span>
+                <span><a href="index.php@m=content&c=index&a=lists&catid=16.html">校园生活</a></span>
             </p>
         </li> -->
         <li>
             <h4>用户角色</h4>
             <p>
                 <span><a href="/role/student/">学生</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=20">在校生家长</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=21">教职工</a></span>
-                <span><a href="/index.php?m=content&c=index&a=lists&catid=22">校友</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=20.html">在校生家长</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=21.html">教职工</a></span>
+                <span><a href="/index.php@m=content&c=index&a=lists&catid=22.html">校友</a></span>
             </p>
         </li>
         <li>
@@ -562,8 +562,8 @@ function resizeFresh(){
             <p>
                                                         <span><a href="https://bnds.yunxiao.com/apps/login" target="_blank">云平台</a></span>
                                         <span><a href="https://mp.weixin.qq.com/s/-rQZJoh6NXuauo-g6Ye7PA" target="_blank">校友卡申办</a></span>
-                                        <span><a href="/index.php?m=content&c=index&a=lists&catid=83" target="_blank">FAQ</a></span>
-                                        <span><a href="/index.php?m=content&c=index&a=lists&catid=100" target="_blank">加入我们</a></span>
+                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=83.html" target="_blank">FAQ</a></span>
+                                        <span><a href="/index.php@m=content&c=index&a=lists&catid=100.html" target="_blank">加入我们</a></span>
                                                 </p>
         </li>
         <li>
