--- a/index.php@m=content&c=index&a=show&catid=41&id=12.html
+++ b/index.php@m=content&c=index&a=show&catid=41&id=12.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 	<head>
 	<meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <meta name="title" property="og:title" content="夏 - 校园四季 - 北京市十一学校官网">
     <meta name="description" property="og:description" content="一树一树的蝉鸣，是夏；">
     <meta name="image" property="og:image" content="https://www.bnds.cn/fxlogo.jpg">
-    <meta property="og:url" content="https://www.bnds.cn/index.php?m=content&c=index&a=show&catid=41&id=12">
+    <meta property="og:url" content="https://www.bnds.cn/index.php@m=content&c=index&a=show&catid=41&id=12.html">
     <meta property="og:site_name" content="夏 - 校园四季 - 北京市十一学校官网">
     <!--share end -->
     <!-- add twitter meta begin -->
